--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: just-the-docs
 title: Astral Observer's Homepage
 description: A place to keep updated on the latest and greatest in my coding projects
