--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-minimal
 title: Astral Observer's Homepage
 description: A place to keep updated on the latest and greatest in my coding projects
+header_pages:
+  - index.html
+  - about.md
