--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Astral Observer's Homepage
+title: Melody's Observatory
 description: A place to keep updated on the latest and greatest in my coding projects
 saas:
   sass_dir: _sass
